# python-games

./: README.md  main.py  play_pong.py  play_snake.py  play_space_combat.py  play_typing.py  pyproject.toml  test_fonts.py  test_resize.py
games/: __init__.py
games/pong/: __init__.py  constants.py  entities.py  game.py
games/snake/: constants.py  entities.py  game.py
games/space_combat/: __init__.py  constants.py  entities.py  game.py  physics.py
games/typing/: __init__.py  constants.py  entities.py  game.py
shared/: __init__.py  base_game.py  constants.py  utils.py
