[project]
name = "python-games"
version = "0.1.0"
description = "Collection of classic games implemented in Python with Pygame"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
snake = "play_snake:main"
space-combat = "play_space_combat:main"
